--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -127,7 +127,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_icon"
-        app:tint="@color/colorSilver"
+        app:tint="@color/colorGrayLight5"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
