--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,7 +43,6 @@
     <color name="colorWhite7">#DFEAF8</color>
     <color name="colorWhite8">#E6E6E6</color>
     <color name="colorWhite9">#F3F3F3</color>
-
     <color name="colorWhite10">#EDEFF0</color>
 
 
@@ -56,6 +55,8 @@
     <color name="colorGrayLight">#999999</color>
     <color name="colorGrayLight2">#E4E4E4</color>
     <color name="colorGrayLight3">#EFEFEF</color>
+    <color name="colorGrayLight4">#E5E5E5</color>
+    <color name="colorGrayLight5">#CECECE</color>
     <color name="colorGray">#666666</color> <!--106 106 106-->
     <color name="colorGrayDark">#404040</color>
     <color name="colorGrayDark2">#444444</color>
