--- a/app/src/main/res/layout/bottom_navigation_item.xml
+++ b/app/src/main/res/layout/bottom_navigation_item.xml
@@ -23,11 +23,10 @@
 
     <TextView
         android:id="@+id/item_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:includeFontPadding="false"
         android:maxLines="1"
         android:textColor="@color/selector_blue_gray_light"
         android:textSize="@dimen/textSize11sp"
