--- a/app/src/main/res/layout/dialog_change_appearance.xml
+++ b/app/src/main/res/layout/dialog_change_appearance.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/color_191919_FCFCFC"
     android:orientation="vertical"
+    android:clickable="true"
+    android:focusable="true"
     tools:context=".ui.menu.ChangeLanguageDialog"
     tools:ignore="SpUsage,RtlSymmetry">
 
