[Fix] 23719 英文投注單頁面需修改

--- a/app/src/main/res/layout/view_match_receipt_total.xml
+++ b/app/src/main/res/layout/view_match_receipt_total.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/bet_info_all_bet"
                 android:textColor="@color/colorGray"
-                android:textSize="@dimen/textSize14sp"
+                android:textSize="@dimen/textSizeReal13sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
                 android:textColor="@color/colorBlackLight"
-                android:textSize="@dimen/textSize14sp"
+                android:textSize="@dimen/textSizeReal13sp"
                 app:layout_constraintBottom_toBottomOf="@+id/title_all_bet"
                 app:layout_constraintStart_toEndOf="@+id/divider_all_bet"
                 app:layout_constraintTop_toTopOf="@+id/title_all_bet"
@@ -64,7 +64,7 @@
                 android:layout_marginStart="6dp"
                 android:gravity="end"
                 android:textColor="@color/colorBlackLight"
-                android:textSize="@dimen/textSize14sp"
+                android:textSize="@dimen/textSizeReal13sp"
                 app:layout_constraintBottom_toBottomOf="@+id/title_all_bet"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_all_bet_count"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/bet_info_list_win_quota"
                 android:textColor="@color/colorGray"
-                android:textSize="@dimen/textSize14sp"
+                android:textSize="@dimen/textSizeReal13sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/title_all_bet" />
@@ -89,7 +89,7 @@
                 android:layout_marginStart="6dp"
                 android:gravity="end"
                 android:textColor="@color/colorBlue"
-                android:textSize="@dimen/textSize14sp"
+                android:textSize="@dimen/textSizeReal13sp"
                 app:layout_constraintBottom_toBottomOf="@+id/title_winnable_amount"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/title_winnable_amount"
