--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -50,8 +50,8 @@
                         android:id="@+id/iv_arrow"
                         android:layout_width="@dimen/margin_28"
                         android:layout_height="@dimen/margin_28"
-                        android:src="@drawable/icon_arrow_gray"
                         android:padding="@dimen/margin_8"
+                        android:src="@drawable/icon_arrow_gray"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -60,8 +60,8 @@
                         android:id="@+id/tv_bet_list"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/bet_list_title"
                         android:layout_marginLeft="@dimen/margin_8"
+                        android:text="@string/bet_list_title"
                         android:textColor="@color/colorBlackLight"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/iv_arrow"
@@ -71,8 +71,7 @@
                         android:id="@+id/divider"
                         android:layout_width="1dp"
                         android:layout_height="0dp"
-                        android:layout_marginStart="6dp"
-                        android:layout_marginEnd="6dp"
+                        android:layout_marginStart="10dp"
                         android:layout_marginTop="@dimen/margin_4"
                         android:layout_marginBottom="@dimen/margin_4"
                         android:background="@color/colorBlackLight"
@@ -84,11 +83,11 @@
                         android:id="@+id/tv_bet_list_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="6dp"
+                        android:layout_marginStart="10dp"
                         android:textColor="@color/colorBlue"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/divider"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         tools:text="1" />
 
                     <ImageView
@@ -96,21 +95,22 @@
                         android:layout_width="@dimen/margin_12"
                         android:layout_height="@dimen/margin_12"
                         android:layout_marginRight="@dimen/margin_8"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintRight_toLeftOf="@+id/tv_balance"
+                        android:src="@drawable/ic_bet_list_money"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:src="@drawable/ic_bet_list_money"/>
+                        app:layout_constraintRight_toLeftOf="@+id/tv_balance"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/tv_balance"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0.000"
                         android:layout_marginRight="@dimen/margin_4"
+                        android:text="0.000"
                         android:textColor="@color/colorBlackLight"
-                        app:layout_constraintTop_toTopOf="parent"
+                        android:textSize="@dimen/textSize12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintRight_toLeftOf="@+id/tv_balance_currency"
+                        app:layout_constraintTop_toTopOf="parent"
                         tools:text="9,875,241.000" />
 
                     <TextView
@@ -119,9 +119,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/margin_4"
                         android:textColor="@color/colorBlackLight"
+                        android:textSize="@dimen/textSize12sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintRight_toLeftOf="@+id/btn_delete_all"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         tools:text="PHP" />
 
                     <ImageView
@@ -140,21 +141,21 @@
                     android:id="@+id/ll_delete_all"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:animateLayoutChanges="true"
                     android:layout_marginLeft="44dp"
+                    android:animateLayoutChanges="true"
                     android:background="@color/colorWhite"
                     android:clickable="true"
                     android:focusable="true"
-                    tools:visibility="gone"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <TextView
                         android:id="@+id/btn_delete_all_confirm"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:layout_marginTop="@dimen/margin_8"
                         android:layout_marginBottom="@dimen/margin_8"
+                        android:layout_weight="1"
                         android:background="@drawable/bg_radius_4_button_e44438"
                         android:gravity="center"
                         android:text="@string/bet_list_delete_all"
@@ -178,50 +179,51 @@
                 android:background="@color/colorGrayGallery" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_above="@+id/cl_total_info"
-                android:layout_below="@+id/gray_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/cl_total_info"
+                android:layout_below="@+id/gray_view">
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_bet_list"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:overScrollMode="never"
-                    tools:itemCount="2"
-                    tools:listitem="@layout/content_bet_info_item"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/ll_keyboard_bg"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/ll_keyboard_bg"/>
+                    tools:itemCount="2"
+                    tools:listitem="@layout/content_bet_info_item" />
 
                 <View
                     android:id="@+id/shadow"
                     android:layout_width="match_parent"
                     android:layout_height="16dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toTopOf="@+id/ll_keyboard_bg"
                     android:background="@drawable/bg_gradient_bottom_sheet_shadow"
-                    android:visibility="gone"/>
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@+id/ll_keyboard_bg"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <LinearLayout
                     android:id="@+id/ll_keyboard_bg"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:background="@color/colorWhite"
                     android:orientation="horizontal"
                     android:padding="6dp"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <org.cxct.sportlottery.ui.common.CustomKeyBoardView
                         android:id="@+id/kv_keyboard"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="@color/colorWhite"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
-                        android:background="@color/colorWhite"
                         android:keyBackground="@drawable/bg_frame_6dp_white"
                         android:visibility="gone"
                         tools:visibility="visible" />
@@ -298,14 +300,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/bet_info_all_bet"
                     android:textColor="@color/colorGray"
-                    android:textSize="@dimen/textSize14sp"
+                    android:textSize="@dimen/textSizeReal13sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <View
                     android:id="@+id/divider_all_bet"
                     android:layout_width="1dp"
-                    android:layout_height="0dp"
+                    android:layout_height="10dp"
                     android:layout_marginStart="6dp"
                     android:background="@color/colorGray"
                     app:layout_constraintBottom_toBottomOf="@+id/title_all_bet"
@@ -318,7 +320,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:textColor="@color/colorBlackLight"
-                    android:textSize="@dimen/textSize14sp"
+                    android:textSize="@dimen/textSizeReal13sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/title_all_bet"
                     app:layout_constraintStart_toEndOf="@+id/divider_all_bet"
@@ -332,7 +334,7 @@
                     android:layout_marginStart="6dp"
                     android:gravity="end"
                     android:textColor="@color/colorBlackLight"
-                    android:textSize="@dimen/textSize14sp"
+                    android:textSize="@dimen/textSizeReal13sp"
                     app:layout_constraintBottom_toBottomOf="@+id/title_all_bet"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_all_bet_count"
@@ -345,7 +347,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/bet_list_win_quota"
                     android:textColor="@color/colorGray"
-                    android:textSize="@dimen/textSize14sp"
+                    android:textSize="@dimen/textSizeReal13sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/title_all_bet" />
@@ -357,7 +359,7 @@
                     android:layout_marginStart="6dp"
                     android:gravity="end"
                     android:textColor="@color/colorBlue"
-                    android:textSize="@dimen/textSize14sp"
+                    android:textSize="@dimen/textSizeReal13sp"
                     app:layout_constraintBottom_toBottomOf="@+id/title_winnable_amount"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/title_winnable_amount"
@@ -388,11 +390,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
                 android:layout_alignParentBottom="true"
-                android:background="@color/colorEEEFF0"
-                android:paddingLeft="@dimen/margin_8"
-                android:paddingRight="@dimen/margin_8"
+                android:background="@color/colorWhite1"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/margin_8"
+                android:paddingRight="@dimen/margin_8">
 
                 <org.cxct.sportlottery.ui.bet.list.FastBetSettingButton
                     android:id="@+id/button_fast_bet_setting"
