--- a/app/src/main/res/layout/item_bet_list_batch_control_v2.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_v2.xml
@@ -144,8 +144,7 @@
                             android:textColor="@color/colorBlue"
                             android:textColorHint="@color/colorSilverLight"
                             android:textSize="@dimen/textSize16sp"
-                            android:letterSpacing="0.05"
-                            android:textStyle="bold" />
+                            android:letterSpacing="0.05" />
 
 <!--                        <View-->
 <!--                            android:id="@+id/et_container"-->
