--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     16    => 16
     -->
     <dimen name="textSize13sp">12dp</dimen>
+    <dimen name="textSizeReal13sp">13dp</dimen>
     <dimen name="textSize14sp">14dp</dimen>
     <dimen name="textSize15sp">14dp</dimen>
     <dimen name="textSize16sp">16dp</dimen>
