--- a/app/src/main/res/layout/item_account_history_next_content_outright.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_outright.xml
@@ -262,7 +262,7 @@
                 android:gravity="center"
                 android:textColor="@color/colorGray"
                 android:textSize="@dimen/textSize12sp"
-                app:dateTimeNoYear="@{matchOdd.startTime}"
+                app:dateTimeNoYear="@{row.addTime}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
