--- a/app/src/main/res/layout/item_account_history_next_content.xml
+++ b/app/src/main/res/layout/item_account_history_next_content.xml
@@ -101,33 +101,23 @@
 
 
             <TextView
-                android:id="@+id/tv_game_type"
+                android:id="@+id/tv_game_type_play_cate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
-                android:gravity="center"
+                android:gravity="start"
                 android:textColor="@color/colorBlackLight"
                 android:textSize="@dimen/textSize14sp"
+                android:textStyle="bold"
                 app:gameType="@{row.gameType}"
-                app:layout_constraintEnd_toStartOf="@id/tv_play_name"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintEnd_toStartOf="@id/list_score"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:playCateName="@{matchOdd.playCateName}"
                 tools:text="篮球" />
-
-            <TextView
-                android:id="@+id/tv_play_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:text="@{matchOdd.playCateName}"
-                android:textColor="@color/colorBlackLight"
-                android:textSize="@dimen/textSize14sp"
-                app:layout_constraintEnd_toStartOf="@+id/list_score"
-                app:layout_constraintStart_toEndOf="@id/tv_game_type"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="让球" />
 
             <TextView
                 android:id="@+id/tv_start_time"
@@ -141,7 +131,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/list_score"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_play_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_game_type_play_cate"
                 tools:text="2022-02-25 10:42" />
 
             <!--playName spread @ odd (oddsType)-->
