[Fix] 23716 英文賽果結算頁面需修改

--- a/app/src/main/res/layout/item_match_result_match.xml
+++ b/app/src/main/res/layout/item_match_result_match.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@color/colorWhite"
     android:orientation="vertical"
-    android:showDividers="middle|end">
+    android:showDividers="middle|end"
+    tools:ignore="SpUsage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +19,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="4dp">
+            android:paddingStart="4dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="4dp"
+            android:paddingBottom="8dp">
 
             <TextView
                 android:id="@+id/tv_home_name"
@@ -28,6 +32,7 @@
                 android:gravity="center"
                 android:textColor="@color/colorGrayDark"
                 android:textSize="@dimen/textSize13sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv_home_vs"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -58,14 +63,14 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_home_vs"
-                app:layout_constraintTop_toTopOf="@id/tv_home_name"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="赫尔辛格" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/colorWhite6" />
+            android:background="#e5e5e5" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -143,7 +148,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorWhite6" />
+        android:background="#e5e5e5" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -184,7 +189,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/colorWhite6" />
+            android:background="#e5e5e5" />
 
         <TextView
             android:id="@+id/empty"
