--- a/app/src/main/res/layout/item_match_result_title.xml
+++ b/app/src/main/res/layout/item_match_result_title.xml
@@ -26,7 +26,8 @@
                 android:id="@+id/iv_arrow"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_marginStart="12dp"
+                android:padding="1dp"
+                android:layout_marginStart="14dp"
                 android:layout_marginEnd="8dp"
                 android:src="@drawable/ic_arrow_down_dark" />
 
