--- a/app/src/main/res/values/symbol_string.xml
+++ b/app/src/main/res/values/symbol_string.xml
@@ -6,7 +6,7 @@
     <string name="tilde">～</string>
     <string name="start">*</string>
     <string name="verse_lower">&#160;&#160;vs&#160;&#160;</string>
-    <string name="verse_">&#160;&#160;v&#160;&#160;</string>
+    <string name="verse_">&#160;&#160;V&#160;&#160;</string>
     <string name="unknown_data">-</string>
     <string name="percent">%</string>
     <string name="id">ID</string>
