--- a/app/src/main/res/layout/activity_version_update.xml
+++ b/app/src/main/res/layout/activity_version_update.xml
@@ -34,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         app:layout_constraintTop_toBottomOf="@id/toolBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.3333" />
 
     <ScrollView
