[fix] 23670 英文快捷注單頁面需修改(23%斜角未解)

--- a/app/src/main/res/layout/content_bet_info_item_quota_detail_v2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_quota_detail_v2.xml
@@ -97,7 +97,8 @@
                 android:gravity="right"
                 android:textColor="@color/color_060F20"
                 android:textSize="@dimen/textSize12sp"
-                tools:text="293.000" />
+                tools:text="293.000"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
