--- a/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
@@ -35,9 +35,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
-                android:gravity="center"
+                android:gravity="start"
                 android:textColor="@color/colorBlackLight"
-                android:textSize="@dimen/textSize12sp"
+                android:textSize="@dimen/textSize14sp"
                 android:textStyle="bold"
                 app:gameType="@{gameType}"
                 app:layout_constrainedWidth="true"
