[調整] 大廳沒有直播提示詳情頁卻會開啟直播

--- a/app/src/main/res/navigation/publicity_navigation.xml
+++ b/app/src/main/res/navigation/publicity_navigation.xml
@@ -134,6 +134,11 @@
             android:name="matchId"
             app:argType="string" />
 
+        <argument
+            android:name="liveVideo"
+            android:defaultValue="0"
+            app:argType="integer" />
+
         <action
             android:id="@+id/action_oddsDetailLiveFragment_self"
             app:destination="@id/oddsDetailLiveFragment"
