--- a/app/src/main/res/navigation/game_navigation.xml
+++ b/app/src/main/res/navigation/game_navigation.xml
@@ -196,6 +196,11 @@
             <argument
                 android:name="matchId"
                 app:argType="string" />
+
+            <argument
+                android:name="liveVideo"
+                android:defaultValue="0"
+                app:argType="integer" />
         </action>
         <action
             android:id="@+id/action_gameV3Fragment_to_leagueFilterFragment"
