--- a/app/src/main/res/layout/view_bottom_navigation.xml
+++ b/app/src/main/res/layout/view_bottom_navigation.xml
@@ -11,7 +11,7 @@
         android:id="@+id/bg_top"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:background="#FAFAFA"
+        android:background="@color/colorWhite1"
         app:layout_constraintBottom_toTopOf="@+id/bg_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/other_link"
         android:textColor="@color/color_333333"
-        android:textSize="12dp"
+        android:textSize="@dimen/textSize12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,7 +36,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/about_us"
         android:textColor="@color/color_999999"
-        android:textSize="14dp"
+        android:textSize="@dimen/textSize14sp"
         app:layout_constraintStart_toStartOf="@+id/txv_other"
         app:layout_constraintTop_toBottomOf="@+id/txv_other" />
 
@@ -85,9 +85,9 @@
 
     <ImageView
         android:id="@+id/img_flag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
+        android:layout_width="20dp"
+        android:layout_height="12dp"
+        android:layout_marginStart="5dp"
         android:src="@drawable/img_flag"
         app:layout_constraintBottom_toBottomOf="@+id/txv_language"
         app:layout_constraintStart_toEndOf="@+id/txv_language"
@@ -156,14 +156,15 @@
         android:id="@+id/txv_btm_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="38dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="38dp"
         android:gravity="center_horizontal"
         android:paddingTop="16dp"
         android:text="@string/btm_navigation_hint"
-        android:textColor="@color/color_999999"
+        android:textColor="@color/colorGray"
         android:textSize="12dp"
+        android:lineSpacingExtra="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txv_contact"
@@ -184,11 +185,11 @@
         android:id="@+id/txv_copyright"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
         android:paddingBottom="12dp"
         android:text="@string/btm_navigation_copyright"
-        android:textColor="@color/color_AAAAAA"
+        android:textColor="@color/colorGrayLight"
         android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -199,6 +200,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.55" />
+        app:layout_constraintGuide_percent="0.5152" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
