[調整] 赛事成绩選單滑動問題

--- a/app/src/main/res/layout/dialog_bottom_sheet_settlement_game_type.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_settlement_game_type.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:divider="@null"
         android:dividerHeight="0dp"
+        android:nestedScrollingEnabled="true"
         tools:listitem="@layout/item_listview_settlement_game_type" />
 
 </LinearLayout>
