--- a/app/src/main/res/layout/dialog_self_limit_froze_important.xml
+++ b/app/src/main/res/layout/dialog_self_limit_froze_important.xml
@@ -17,6 +17,7 @@
         android:gravity="center"
         android:minWidth="300dp"
         android:orientation="vertical"
+        android:elevation="0dp"
         android:paddingTop="11dp">
 
         <TextView
